--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "fs": "0.0.1-security",
+    "raw-loader": "^4.0.0"
   }
 }
