--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redacted_terminal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://hitcherland.github.io/redact-terminal",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,6 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
     "audio-loader": "^1.0.3",
     "file-loader": "^5.0.2",
     "fs": "0.0.1-security",
+    "gh-pages": "^2.2.0",
     "raw-loader": "^4.0.0"
   }
 }
